--- a/Mini Projects/CHENNU GIRISHKUMAR/App.html
+++ b/Mini Projects/CHENNU GIRISHKUMAR/App.html
@@ -5,17 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/391827d54c.js" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="./Assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>Netflix India - Watch TV Shows Online, Watch Movies Online</title>
 </head>
 <body>
     <div class="header">
         <nav>
-            <img class="logo" src="./Assets/logo.png" alt="logo">
+            <img class="logo" src="./Assets/images/th (1).jpeg" alt="logo">
             <div>
-                <button class="lang-btn"><i class="fa-solid fa-globe"></i> English <img src="./Assets/down-icon.png"></button>
-                <button>Sign In</button>
+                <button> Sign Up</button>
+                <button> Sign In</button>
             </div>
         </nav>
 
@@ -37,12 +36,12 @@
                 <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
             </div>
             <div class="img-col">
-                <img src="./Assets/feature-1.png" alt="feature-1">
+                <img src="./Assets/images/th1.jpg" alt="feature-1">
             </div>
         </div>
         <div class="row">
             <div class="img-col">
-                <img src="./Assets/feature-2.png" alt="feature-2">
+                <img src="./Assets/images/th2.jpeg" alt="feature-2">
             </div>
             <div class="text-col">
                 <h2>Download your shows to watch offline.</h2>
@@ -55,12 +54,12 @@
                 <p>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
             </div>
             <div class="img-col">
-                <img src="./Assets/feature-3.png" alt="feature-3">
+                <img src="./Assets/images/th3.jpg" alt="feature-3">
             </div>
         </div>
         <div class="row">
             <div class="img-col">
-                <img src="./Assets/feature-4.png" alt="feature-4">
+                <img src="./Assets/images/c1.jpg" alt="feature-4">
             </div>
             <div class="text-col">
                 <h2>Create profiles for children.</h2>
@@ -159,9 +158,6 @@
                 <a href="#">Contact Us</a>
             </div>
         </div>
-
-        <button class="lang-btn"><i class="fa-solid fa-globe"></i> English <img src="./Assets/down-icon.png"></button>
-
         <p class="copyright-text">Netflix India</p>
     </div>
 
